# zzsn_backdoor_detection

./: .gitignore  LICENSE  README.md  pyproject.toml  test_new_model.py
BadMerging/src/: modeling.py
BadMerging/src/datasets/: imagenet100_zzsn.py  registry.py  templates.py
K-ARM/: Arm_Pre_Screening.py  K_ARM_Opt.py  K_Arm_Scanner.py  dataset.py  main.py  utils.py
MM-BD/: MM_BD_outputs.txt  attacks_crafting.py  parse_outputs.py  playground.ipynb  train_resnet50.py  train_zzsn_contam.py  zzsn_detect vol2.py  zzsn_detect.py  zzsn_detect_mnist.py  zzsn_train_resnet50_cifar.ipynb
Neural_Cleanse/: mad_outlier_detection.py  mm_bad_dataset.py  reverse_trigger.py  utils_backdoor.py  visualizer.py
notebooks/: explore_data.ipynb  load_models.ipynb  load_models_2.ipynb  load_models_2_2.ipynb  load_models_old.ipynb
scripts/: download.sh
src/: heads.py  modeling.py
zzsn_backdoor_detection/: __init__.py  dataset.py  features.py  plots.py
zzsn_backdoor_detection/modeling/: predict.py  train.py
